--- a/Workspace_html/HW_HTML/WebContent/index.html
+++ b/Workspace_html/HW_HTML/WebContent/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html class="html" lang="en">
-
 <head>
 	<meta charset="UTF-8">
 	<title>Welcome to Steam</title>
@@ -16,10 +15,9 @@
 			right: 0;
 			left: 0;
 			bottom: 0;
-			position: relative;
+			position: fixed;
 			background: url("resources/img/colored_body_top2.png") center top no-repeat;
 			background-color: #1b2838;
-
 		}
 		header {
 			background: rgb(31, 31, 36);
@@ -219,6 +217,31 @@
 		.next_picture_one {
 			height: 40px;
 		}
+		.one_link {
+			width: 100%;
+			height: 380px;
+			background-image: url("resources/img/background_maincap_2.jpg");
+			background-position: right;
+			background-repeat: no-repeat;
+		}
+		.picture_left_box {
+			width: 600px;
+			height: 100%;
+			background-image: url("resources/img/capsule_616x353\ \(1\).jpg");
+
+			background-size: cover;
+			background-position: center center;
+			margin-right: 10px;
+			position: relative;
+		}
+		.picture_right_box {
+			width: 309px;
+			height: 100%;
+		}
+		.picture_left_box, .picture_right_box {
+			float: left;
+			box-shadow: 0 0 10px black;
+		}
 		.center_two {
 			position: relative;
 			height: 480px;
@@ -252,7 +275,6 @@
 		.two_box h4 .more:hover {
 			border: 1px solid rgb(238, 238, 238);
 		}
-
 		.two_box h4 span a {
 			text-decoration: none;
 			letter-spacing: 0px;
@@ -279,10 +301,8 @@
 			position: absolute;
 			background-image: url("resources/img/background_spotlight.jpg") bottom center no-repeat;
 		}
-		
 	</style>
 </head>
-
 <body class="backColor">
 	<div class="main">
 		<header>
@@ -333,11 +353,11 @@
 					<h4>FEATURED & RECOMMENDED</h3>
 						<div class="main_picture_one">
 							<div class="picture_one">
-								<a href="">
-									<div>
+								<a href="#" class="one_link">
+									<div class="picture_left_box">
 
 									</div>
-									<div>
+									<div class="picture_right_box">
 
 									</div>
 								</a>
@@ -422,12 +442,10 @@
 
 				</article>
 			</section>
-
 		</div>
 		<footer>
 
 		</footer>
 	</div>
 </body>
-
 </html>
