Clone html Prectice

--- a/Workspace_html/HW_HTML/WebContent/index.html
+++ b/Workspace_html/HW_HTML/WebContent/index.html
@@ -308,6 +308,9 @@
 			display: inline-block;
 			opacity: 0.5;
 		}
+		.PUBG_one:hover, .PUBG_two:hover, .PUBG_three:hover, .PUBG_four:hover {
+			opacity: 1;
+		}
 		.PUBG_one {
 			background-image: url("resources/img/ss_c49417566f70eec8bf0ddbb2956b235d91504a09.600x338.jpg");
 		}
